Stopped using home.pug file

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,8 @@
-h1
-    | evala
-a(href="/login")
-    h2
-        | LogIn
-a(href="/register")
-    h2
-        | Register
+//- h1
+//-     | evala
+//- a(href="/login")
+//-     h2
+//-         | LogIn
+//- a(href="/register")
+//-     h2
+//-         | Register
