Fixed login button, deleted not needed files

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -5,7 +5,7 @@ mixin login()
                  .modal-body
                      .container
                          h2 Login
-                         form.form-horizontal(action='/', method='POST')
+                         form.form-horizontal(action='/login', method='POST')
                              .form-group
                                  label.control-label.col-sm-2(for='username') Username:
                                  .col-sm-6
