--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -9,11 +9,11 @@ mixin login()
                              .form-group
                                  label.control-label.col-sm-2(for='username') Username:
                                  .col-sm-6
-                                     input#email.form-control(type='text', placeholder='Enter username', name='username')
+                                     input#username.form-control(type='text', placeholder='Enter username', name='username')
                              .form-group
                                  label.control-label.col-sm-2(for='psw') Password:
                                  .col-sm-6
-                                     input#email.form-control(type='password', placeholder='Enter Password', name='password')
+                                     input#password.form-control(type='password', placeholder='Enter Password', name='password')
                              .form-group
                                  .col-sm-offset-2.col-sm-10
                                      button.btn.btn-success(type='submit',value='Log In') Log In
