--- a/views/shared-views/index-content.pug
+++ b/views/shared-views/index-content.pug
@@ -1,19 +1,5 @@
-include ./shared-views/nav
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
-        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-        link(rel="stylesheet", href="static/styles/main.css")
-        script(src="/static/js/register-validation.js")
-        title Kick Survey
-    body
-    +nav()
-    h1
+mixin index-content()
+h1
         | Hello, #{username}
     h2
         | Email: #{email}
