--- a/views/shared-views/master.pug
+++ b/views/shared-views/master.pug
@@ -9,6 +9,7 @@ html(lang="en")
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         link(rel="stylesheet", href="static/styles/main.css")
+        script(src="/static/js/login-validation.js")
         script(src="/static/js/register-validation.js")
         title Kick Survey
     body
