Added visualization charts to pug

--- a/views/shared-views/index-content.pug
+++ b/views/shared-views/index-content.pug
@@ -1,8 +1,8 @@
-mixin index-content()
-h1
+mixin indexContent()
+    h1
         | Hello, #{username}
     h2
-        | Email: #{email}
+       | Email: #{email}
     h2
         | Name: #{name}    
     ul
