--- a/views/preview-survey/preview.pug
+++ b/views/preview-survey/preview.pug
@@ -29,4 +29,4 @@ html(lang="en")
                     p Created at: 
                         span
             .row
-                form#submit-survey(action="/submit", method="post")
+                form#submit-survey()
