Fixed the preview. Moved the templates in a separate file.

--- a/views/preview-survey/preview.pug
+++ b/views/preview-survey/preview.pug
@@ -12,6 +12,7 @@ html(lang="en")
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
         script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")        
+        script(src="../static/js/preview-templates.js")
         script(src="../static/js/preview.js")
         
         title Kick Survey
