Added a button for generating a url for a preview of the survey. Fixed some typos.

--- a/views/create-survey/page.pug
+++ b/views/create-survey/page.pug
@@ -20,5 +20,4 @@ html(lang="en")
         +initial()
         +questionAdd()
 
-        
-
+        input#generate-share.btn.btn-primary(type="button", value="Share")
