--- a/views/create-survey/form.pug
+++ b/views/create-survey/form.pug
@@ -9,10 +9,10 @@ mixin questionAdd()
                     label(for="question") Question:
                     input.question.form-control(type="text" name="question")
                   div.form-group
-                    label(for="question-type") Question:
+                    label(for="question-type") Answer Type:
                     select.question-types.form-control
                       each questionType in questionTypes
                         option(value=questionType.q_type)
                           | #{questionType.q_type}
             button#add-question-btn.btn.btn-primary(type='button') Add new Question
-                    
+                  button#done-btn.btn.btn-primary(type='submit') DONE
