added new chart

--- a/views/shared-views/master.pug
+++ b/views/shared-views/master.pug
@@ -25,3 +25,6 @@ html(lang="en")
                 .container.col-sm-6
                     .chart-container2
                         canvas#chart2
+                .container.col-sm-6
+                    .chart-container2
+                        canvas#chart3
