Working on create survey

--- a/views/create-survey/form.pug
+++ b/views/create-survey/form.pug
@@ -2,7 +2,7 @@ mixin questionAdd()
     div#container
         h3.survey-name
         h3.category
-        div#create-
+        div#create
             form#create-survey-form.create-survey-form(method="POST" action="/create")
                 div#wrapper
                     div.full-question-info
