added some new charts with some new logic in data-controller

--- a/views/shared-views/master.pug
+++ b/views/shared-views/master.pug
@@ -19,12 +19,24 @@ html(lang="en")
         +nav()
         block content
             .content
-                .container.col-sm-6
+                .container.col-sm-1
+                .container.col-sm-5
                     .chart-container
                         canvas#pie-chart
-                .container.col-sm-6
+                .container.col-sm-1
+                .container.col-sm-1
+                .container.col-sm-5
                     .chart-container2
                         canvas#chart2
-                .container.col-sm-6
+                .container.col-sm-1
+                .container.col-sm-1
+                .container.col-sm-5
                     .chart-container2
                         canvas#chart3
+                .container.col-sm-1
+                .container.col-sm-1
+                .container.col-sm-5
+                    .chart-container2
+                        canvas#chart4
+                .container.col-sm-1
+                
