--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
         link(rel="stylesheet", href="static/styles/main.css")
-        script(src="/static/js/register-validation.js")
+        script(src="../static/js/user-surveys.js")
         title Kick Survey
     body
     +nav()
