--- a/views/shared-views/index-content.pug
+++ b/views/shared-views/index-content.pug
@@ -1,40 +1,27 @@
 mixin indexContent()
-    h1
-        | Hello, #{username}
-    h2
-       | Email: #{email}
-    h2
-        | Name: #{name}    
-    ul
-        each survey in model
-            li
+    #surveys-container.container-fluid
+        .row#surveys-header
+            .col-md-2
                 p
-                    | survey id: #{survey.surveyData.id}
-            li
+                    | TITLE
+            .col-md-2
                 p
-                    | survey name: #{survey.surveyData.name}
-            li
+                    | CATEGORY
+            .col-md-2
                 p
-                    | survey category: #{survey.surveyData.category}
-            li
+                    | CREATED AT
+            .col-md-2
                 p
-                    | survey createdAt: #{survey.surveyData.createdAt}
-                ul
-                    each surveyContent in survey.surveyContentData
-                        li
-                            p
-                                | №: #{surveyContent.questionData.order}
-                        li
-                            p
-                                | question: #{surveyContent.questionData.question}
-                        li
-                            p
-                                | isRequired: #{surveyContent.questionData.isRequired}
-                        li
-                            p
-                                | type: #{surveyContent.questionData.type}
-                            ul
-                                each answer in surveyContent.answersData
-                                    li  
-                                        p
-                                            | answer: #{answer.answer}
+                    | LAST RESPONSE
+            .col-md-1
+                p
+                    | RESPONSES
+            .col-md-1
+                p
+                    | ANALYZE
+            .col-md-1
+                p
+                    | SHARE
+            .col-md-1
+                p
+                    | DELETE
