--- a/views/shared-views/index-content.pug
+++ b/views/shared-views/index-content.pug
@@ -1,27 +1,3 @@
 mixin indexContent()
     #surveys-container.container-fluid
-        .row#surveys-header
-            .col-md-2
-                p
-                    | TITLE
-            .col-md-2
-                p
-                    | CATEGORY
-            .col-md-2
-                p
-                    | CREATED AT
-            .col-md-2
-                p
-                    | LAST RESPONSE
-            .col-md-1
-                p
-                    | RESPONSES
-            .col-md-1
-                p
-                    | ANALYZE
-            .col-md-1
-                p
-                    | SHARE
-            .col-md-1
-                p
-                    | DELETE
+        #main.col-sm-12.col-md-12
