--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,7 @@ html(lang="en")
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
         link(rel="stylesheet", href="static/styles/main.css")
+        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous")        
         script(src="../static/js/user-surveys.js")
         title Kick Survey
     body
