--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -56,6 +56,7 @@
 
 /* User's surveys visualizations */
 
+.survey-question,
 .survey-title,
 .survey-cat,
 .survey-date,
@@ -64,6 +65,7 @@
     padding: 0 20px;
 }
 
+.info,
 .survey span {
     margin-left: 10px;
 }
@@ -113,4 +115,7 @@
 
 hr {
     margin: 5px 0px;
+}
+.bolded { 
+    font-weight: bold;
 }
