--- a/views/preview-survey/statistics.pug
+++ b/views/preview-survey/statistics.pug
@@ -1,4 +1,5 @@
 include ../shared-views/nav
+include ../shared-views/question-content.pug
 <!DOCTYPE html>
 html(lang="en")
     head
@@ -9,8 +10,9 @@ html(lang="en")
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
         link(rel="stylesheet", href="../static/styles/main.css")
+        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous")        
         script(src="../static/js/statistics.js")
-        link(rel="stylesheet", href="../static/styles/main.css")
         title Kick Survey
     body
     +nav()
+    +questionInfo()
