--- a/views/create-survey/form.pug
+++ b/views/create-survey/form.pug
@@ -1,20 +1,24 @@
 mixin questionAdd()
-    div#container
-        h3.survey-name
-        h3.category
+    div#container       
+        hr
         div#create
             form#create-survey-form.create-survey-form(method="POST" action="/create")
                 div#wrapper
-                    div.full-question-info
+                    div.container.full-question-info
                         div.question.form-group
                             label(for="question") Question:
-                            input.question.form-control(type="text" name="question")
+                            input.question.form-control(type="text" name="question", placeholder="Type your question")
                         div.answer.form-group
                             label(for="question-type") Answer Type:
                             select.question-types.form-control(name="question-type")
                                 each questionType in questionTypes
                                     option(value=questionType.q_type)
                                         | #{questionType.q_type}
+
+
+            .btn-group
                 button#add-question-btn.btn.btn-primary(type="button") Add new Question
+                    
                 button#done-btn.btn.btn-primary(type="submit") DONE
-                  
+                button#edit-create-btn.btn.btn-info.btn-lg(type="button" data-toggle="modal" data-target="#edit-create") Open Modal
+
