--- a/views/create-survey/create-survey-master.pug
+++ b/views/create-survey/create-survey-master.pug
@@ -1,5 +1,4 @@
 include ../shared-views/nav
-include ./form
 include ./initial
 include ./popup-edit-create
 include ./question
@@ -11,6 +10,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous")
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
         link(rel="stylesheet", href="static/styles/main.css")
@@ -32,7 +32,6 @@ html(lang="en")
         .row
             div.col-xs-12.col-sm-12.col-md-12.col-lg-12.center-block
                 button.btn.btn-success.center-block.active(data-toggle="modal" data-target="#edit-create") ADD QUESTION
-        
-
+                button#create-survey.btn.btn-success(type="submit" form="create-form") SUBMIT
 
             //- input#generate-share.btn.btn-primary(type="button", value="Share") 
