--- a/views/create-survey/popup-edit-create.pug
+++ b/views/create-survey/popup-edit-create.pug
@@ -6,31 +6,39 @@ mixin edit-create()
                 .modal-body
                     .container
                         h2.register-header Question info
-                        form#registerForm.form-horizontal(method='POST', action='/create')
+                        form#create-form.form-horizontal(action='')
                             .form-group
-                                label.control-label.col-sm-3(for='question') Question name:
-                                .col-sm-6
-                                    input#username.form-control(type='text', placeholder='Enter question name', name='question') 
+                                label.control-label.col-sm-3.col-xs-3.col-md-3.col-lg-3(for='question') Question name:
+                                .col-sm-9.col-xs-9.col-md-9.col-lg-9
+                                    input.form-control(type='text', placeholder='Enter question name', name='question') 
                             .form-group
-                                label.control-label.col-sm-3(for="question-type") Answer Type:
-                                .col-sm-6
+                                label.control-label.col-sm-3.col-xs-3.col-md-3.col-lg-3(for="question-type") Answer Type:
+                                .col-sm-9.col-xs-9.col-md-9.col-lg-9
                                     select.question-types.form-control(name="question-type")
                                         each questionType in questionTypes
                                             option(value=questionType.q_type)
-                                                | #{questionType.q_type}
-                            .form-group
-                                label.control-label.col-sm-3(for='question') Answer:
-                                .col-sm-6
-                                    input.answer.form-control(type='text', placeholder='Enter answer', name='answer')
-                                .col-sm-3
-                                    button.btn.btn-success-lg(type="submit" value="add")
-                                        i.fas.fa-plus
-                                        span.caret                                        
-                                    button.btn.btn-success-lg(type="submit" value="rem")
+                                                | #{questionType.q_type}  
+                            div#answers
                             .form-group
                                 .col-sm-offset-2.col-sm-10
-                                    button#register-submit.btn.btn-success(type='submit', value='Register') Done
-                                    p#registerErrorMsg
+                                    button.btn.btn-success.done Done
+    
                 .modal-footer
                     button.btn.btn-default(type="button", data-dismiss="modal")
                         | Close
+
+
+
+
+
+
+
+//- .form-group
+//-         label.control-label.col-sm-3(for='question') Answer:
+//-         .col-sm-6
+//-             input.answer.form-control(type='text', placeholder='Enter answer', name='answer')
+//-         .col-sm-3
+//-             button#add-field.btn.btn-success
+//-                 i.fas.fa-plus  
+//-             button.btn.btn-danger
+//-                 i.fas.fa-minus
