--- a/views/shared-views/index-content.pug
+++ b/views/shared-views/index-content.pug
@@ -1,18 +1,22 @@
 mixin indexContent()
-    .container-fluid
-            .btn-group.filter-category
-                button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-                    i.fas.fa-filter
-                    |   Filter by category 
-                    span.caret
-                ul.dropdown-menu
-                    li.cat
+    .container-fluid.filter-category-container
+        .col-xs-12.col-sm-12.col-md-12.col-lg-12
+            .row
+                .col-lg-10.col-lg-offset-1.col-md-10.col-md-offset-1.col-sm-10.col-sm-offset-1
+                    .col-xs-12.col-sm-12.col-md-12.col-lg-12.col-xl-12
+                        .btn-group.filter-category
+                            button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                                i.fas.fa-filter
+                                |   Filter by category 
+                                span.caret
+                            ul.dropdown-menu
+                                li.cat
 
-                        span All
-                    li.divider(role='separator')
-                    each category in categories
-                        li.cat
-                            span #{category.name}
+                                    span All
+                                li.divider(role='separator')
+                                each category in categories
+                                    li.cat
+                                        span #{category.name}
 
     #delete-survey-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='delete-survey-modalLabel')
         .modal-dialog(role='document')
