--- a/views/create-survey/create-survey-master.pug
+++ b/views/create-survey/create-survey-master.pug
@@ -30,10 +30,10 @@ html(lang="en")
             //- +question()
             +edit-create()
         div#question-list.container
-        .row
+        .container
             div.col-xs-12.col-sm-12.col-md-12.col-lg-12
             .btn-group.text-center
-                button.btn.btn-success.active(data-toggle="modal" data-target="#edit-create") ADD QUESTION
-                button#create-survey.btn.btn-success(type="submit" form="create-form") SUBMIT
+                button.btn.btn-success.add-submit.active(data-toggle="modal" data-target="#edit-create") ADD QUESTION
+                button#create-survey.btn.btn-success.add-submit(type="submit" form="create-form") SUBMIT
 
             //- input#generate-share.btn.btn-primary(type="button", value="Share") 
