--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -60,6 +60,7 @@
 
 /* Cretae survey */
 .survey-info {
+    font-size: 2rem;
     margin: 0 auto;
     padding: 0.5rem;
     color:rgba(59, 112, 47, 0.7);
@@ -97,13 +98,11 @@
     text-align: center
 }
 
-<<<<<<< HEAD
 .survey-share .popover-content {
     word-wrap: break-word;
-=======
+}
 .tooltip{
     min-width: 100px;
->>>>>>> 65223b12ce21e2d7de25a3358c764ed7ff4e7810
 }
 
 .delete-anchor,
@@ -198,12 +197,9 @@ hr {
     padding: 0 15px;
 }
 
-/* .add-answer-btn,
-.delete-answer-btn {
-    padding: 3px 8px;
-    margin-top: 5px
+.btn {
+    margin-bottom: 10px; 
 }
-*/
 .add-answer-btn {
     margin-right: 5px
 }
@@ -220,4 +216,8 @@ img{
     .navbar-header {
         display: none;
     }
+}
+
+.done-submit{
+    margin-top: 3rem;
 }
