--- a/views/create-survey/create-survey-master.pug
+++ b/views/create-survey/create-survey-master.pug
@@ -32,7 +32,7 @@ html(lang="en")
         div#question-list.container
         .container
             div.col-xs-12.col-sm-12.col-md-12.col-lg-12
-            .btn-group.text-center
+            .btn-group.done-submit
                 button.btn.btn-success.add-submit.active(data-toggle="modal" data-target="#edit-create") ADD QUESTION
                 button#create-survey.btn.btn-success.add-submit(type="submit" form="create-form") SUBMIT
 
