fixed bug in main page , added accordion to analyze page

--- a/views/shared-views/nav.pug
+++ b/views/shared-views/nav.pug
@@ -5,7 +5,8 @@ mixin nav()
     nav.navbar
         .container-fluid
             .navbar-header
-                a.navbar-brand(href="Kick Survey")
+                img(src="/static/img/logo.png", alt="HAHAH")
+                //- a.navbar-brand(href="Kick Survey")
             //- ul.nav.navbar-nav
             //-     li.active
             //-         a(href="#")
