--- a/views/shared-views/question-content.pug
+++ b/views/shared-views/question-content.pug
@@ -1,3 +1,4 @@
 mixin questionInfo()
-     div#surveys-container.container-fluid
-        div#main.col-sm-12.col-md-12
+        #accordion.panel-group(role='tablist', aria-multiselectable='true')
+            div#surveys-container.container-fluid
+                div#main.col-sm-12.col-md-12
