Refactored preview modal success and  error

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -59,22 +59,27 @@
 }
 
 /* Cretae survey */
+
 .survey-info {
     font-size: 2rem;
     margin: 0 auto;
     padding: 0.5rem;
-    color:rgba(59, 112, 47, 0.7);
-    
+    color: rgba(59, 112, 47, 0.7);
 }
-.survey-create, .content {
+
+.survey-create,
+.content {
     background-color: #F3F3F3;
 }
+
 .question-wrapper {
     margin: 3px;
 }
+
 .question-title {
     font-size: 2rem;
 }
+
 /* User's surveys visualizations */
 
 .survey-question,
@@ -102,7 +107,7 @@
     word-wrap: break-word;
 }
 
-.tooltip{
+.tooltip {
     min-width: 100px;
 }
 
@@ -151,7 +156,6 @@ hr {
     margin-right: 10px;
 }
 
-
 .filter-category-container {
     margin-bottom: 10px;
 }
@@ -166,18 +170,17 @@ hr {
 }
 
 .spinner {
-	width: 100px;
-	height: 100px;
+    width: 100px;
+    height: 100px;
     font-size: 100px;
-	position: absolute;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     margin: auto;
     display: none;
     z-index: 99999;
-    
 }
 
 .over {
@@ -187,11 +190,12 @@ hr {
     z-index: 9999;
 }
 
-.bolded { 
+.bolded {
     font-weight: bold;
 }
+
 .answer {
-    margin-left: 10px; 
+    margin-left: 10px;
 }
 
 .survey-create .initial-field {
@@ -199,17 +203,19 @@ hr {
 }
 
 .btn {
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 }
+
 .add-answer-btn {
     margin-right: 5px
 }
 
-img{
+img {
     width: 90px;
     height: 50px;
 }
-.add-submit{
+
+.add-submit {
     display: none;
 }
 
@@ -219,6 +225,28 @@ img{
     }
 }
 
-.done-submit{
+.done-submit {
     margin-top: 3rem;
+}
+
+/* Modal success */
+
+div.success{
+    display: none;
+}
+
+i.success {
+    color: rgb(14, 181, 17);
+    display: none;
+}
+span.success {
+    display: none;
+}
+
+i.reject {
+    color: #ce0101;
+    display: none;
+}
+span.reject {
+    display: none;
 }
