--- a/views/preview-survey/preview.pug
+++ b/views/preview-survey/preview.pug
@@ -22,6 +22,7 @@ html(lang="en")
     body
         +loader()
         +nav()
+
         #submission-survey-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='submit-survey-modalLabel')
             .modal-dialog(role='document')
                 .modal-content
@@ -30,7 +31,13 @@ html(lang="en")
                             span(aria-hidden='true') ×
                         h4#submit-survey-modal-label.modal-title
                             | Submission status: 
+                            i.fas.fa-check-circle.success
+                            i.fas.fa-times-circle.reject
                     .modal-body
+                        span.success
+                            | Thank you for your submission.
+                        span.reject
+                            | Unfortunately, we couldn't save your submission.
                     .modal-footer
                         button.btn.btn-default(type='button', data-dismiss='modal') Close
         .container
