--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -215,6 +215,10 @@ img{
     display: none;
 }
 
+.no-surveys-found {
+    text-align: center;
+}
+
 @media (max-width: 767px) {
     .navbar-header {
         display: none;
