--- a/views/preview-survey/preview.pug
+++ b/views/preview-survey/preview.pug
@@ -1,5 +1,6 @@
 include ../shared-views/nav
 include ../shared-views/loader
+include ./modal-message
 <!DOCTYPE html>
 html(lang="en")
     head
@@ -25,23 +26,7 @@ html(lang="en")
 
         div#surveys-container.container-fluid
                 div#main.col-sm-9.col-md-9.col-sm-offset-3.col-md-offset-3
-        #submission-survey-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='submit-survey-modalLabel')
-            .modal-dialog(role='document')
-                .modal-content
-                    .modal-header
-                        button.close(type='button', data-dismiss='modal', aria-label='Close')
-                            span(aria-hidden='true') ×
-                        h4#submit-survey-modal-label.modal-title
-                            | Submission status: 
-                            i.fas.fa-check-circle.success
-                            i.fas.fa-times-circle.reject
-                    .modal-body
-                        span.success
-                            | Thank you for your submission.
-                        span.reject
-                            | Unfortunately, we couldn't save your submission.
-                    .modal-footer
-                        button.btn.btn-default(type='button', data-dismiss='modal') Close
+        +modalMessage()
         .container
             .row#initial
             .row
