added unit test for data-controller

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -210,7 +210,7 @@ hr {
     margin-bottom: 10px;
 }
 
-<<<<<<< HEAD */=======>>>>>>>a9d92ef9a02af571e473142d14c256ac65724e51 .add-answer-btn {
+.add-answer-btn {
     margin-right: 5px
 }
 
