--- a/views/create-survey/popup-edit-create.pug
+++ b/views/create-survey/popup-edit-create.pug
@@ -7,6 +7,7 @@ mixin edit-create()
                     .container
                         h2.register-header Question info
                         form#create-form.form-horizontal(method="post" action='/create')
+                            label#warning-question-label
                             .form-group
                                 label.control-label.col-sm-3.col-xs-3.col-md-3.col-lg-3(for='question') Question name:
                                 .col-sm-9.col-xs-9.col-md-9.col-lg-9
