--- a/views/create-survey/create-survey-master.pug
+++ b/views/create-survey/create-survey-master.pug
@@ -29,7 +29,8 @@ html(lang="en")
         div#question.container
             //- +question()
             +edit-create()
-        div#question-list.container
+        div.container
+            ol#question-list
         .container
             div.col-xs-12.col-sm-12.col-md-12.col-lg-12
             .btn-group.done-submit
